Update entity classes

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,10 +1,10 @@
 # To reuse serializer for irradiation recipes
 public net.minecraft.world.item.crafting.SimpleCookingSerializer$CookieBaker
 
-protected net.minecraft.entity.ai.goal.MeleeAttackGoal field_234037_i_ # attackTick
+protected net.minecraft.world.entity.ai.goal.MeleeAttackGoal f_25548_ # ticksUntilNextAttack
 
 # To use shortcut in implementing metal boat sinking
-protected net.minecraft.entity.item.BoatEntity func_184449_t()Lnet/minecraft/entity/item/BoatEntity$Status; # getBoatStatus
+protected net.minecraft.world.entity.vehicle.Boat m_38392_()Lnet/minecraft/world/entity/vehicle/Boat$Status; # getStatus
 
 # To better replicate vanilla teleportation in our own teleportation code
 public net.minecraft.entity.player.ServerPlayerEntity field_184851_cj # invulnerableDimensionChange
