Update remaining client classes

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,8 +9,8 @@ protected net.minecraft.world.entity.vehicle.Boat m_38392_()Lnet/minecraft/world
 # To better replicate vanilla teleportation in our own teleportation code
 public net.minecraft.entity.player.ServerPlayerEntity field_184851_cj # invulnerableDimensionChange
 
-# To register a custom instance of DimensionRenderInfo for lands
-public net.minecraft.client.world.DimensionRenderInfo field_239208_a_ #EFFECTS
+# To register a custom instance of DimensionSpecialEffects for lands
+public net.minecraft.client.renderer.DimensionSpecialEffects f_108857_ # EFFECTS
 
 # For hack to force weather in lands
 public-f net.minecraft.world.World field_72986_A #levelData
