Update remaining classes in land package

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,4 +13,4 @@ public net.minecraft.entity.player.ServerPlayerEntity field_184851_cj # invulner
 public net.minecraft.client.renderer.DimensionSpecialEffects f_108857_ # EFFECTS
 
 # For hack to force weather in lands
-public-f net.minecraft.world.World field_72986_A #levelData
+public-f net.minecraft.world.level.Level f_46442_ # levelData
