Update remaining classes

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,7 +7,7 @@ protected net.minecraft.world.entity.ai.goal.MeleeAttackGoal f_25548_ # ticksUnt
 protected net.minecraft.world.entity.vehicle.Boat m_38392_()Lnet/minecraft/world/entity/vehicle/Boat$Status; # getStatus
 
 # To better replicate vanilla teleportation in our own teleportation code
-public net.minecraft.entity.player.ServerPlayerEntity field_184851_cj # invulnerableDimensionChange
+public net.minecraft.server.level.ServerPlayer f_8927_ # isChangingDimension
 
 # To register a custom instance of DimensionSpecialEffects for lands
 public net.minecraft.client.renderer.DimensionSpecialEffects f_108857_ # EFFECTS
