--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,3 +14,6 @@ public net.minecraft.client.renderer.DimensionSpecialEffects f_108857_ # EFFECTS
 
 # For hack to force weather in lands
 public-f net.minecraft.world.level.Level f_46442_ # levelData
+
+# Temporary use while figuring out AbstractChunkGenerator
+public net.minecraft.world.level.levelgen.NoiseChunk m_209247_()Lnet/minecraft/world/level/block/state/BlockState; # getInterpolatedState
