--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,12 +23,12 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
 
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Gradle Build
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: build
