--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,5 +36,7 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: :runData
+    - name: Brute force git safe directory # Workaround for actions/runner#2033. This step should be removed/replaced once the issue has been fixed proper
+      run: git config --global --add safe.directory '*'
     - name: Has File Changes
       uses: mskri/check-uncommitted-changes-action@v1.0.1
