Add infiniverse as a dependency for registering land dimensions

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ mc_jei_version=1.18.2:9.7.1.232
 mc_gecko_version=forge-1.18:3.0.34
 
 mc_refined_storage_version=1.10.3
+
+infiniverse_branch=infiniverse-1.18.2
+infiniverse_version=1.0.0.2
