--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,5 +36,7 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: :runData
+    - name: View light_water
+      run: cat src/main/generated/resources/data/minestuck/tags/fluids/light_water.json
     - name: Has File Changes
       uses: anhpham1509/check-uncommitted-changes-action@d6774588ba954c53b7f01b78505d087e1b1a32f1
