Clean up workflow

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,17 +36,12 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: :runData
-    - name: View light_water
-      run: cat src/main/generated/resources/data/minestuck/tags/fluids/light_water.json
-    - name: View git status result
-      run: git status
-    - name: View git status result  with --porcelain
-      run: git status --porcelain
     - name: Detect Changes
       id: changes
       uses: ch4rl3x/has-changes-action@3058353091eb04bf2c56876af42fd5a286b41faa
     - name: Did runData create changes?
       if: steps.changes.outputs.changed == 1
       run: |
-        echo "Files were changed after running runData. Make sure to run and commit changes from runData!"
+        echo "Files were changed after running runData. Make sure to run runData and commit changes!"
+        git status --porcelain
         exit 1
