--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,8 @@ dependencies {
 
     implementation fg.deobf("software.bernie.geckolib:geckolib-${project.getProperty('mc_gecko_version')}")
     implementation fg.deobf("commoble.infiniverse:${infiniverse_branch}:${infiniverse_version}")
+
+    compileOnly fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.18.2-1.2.0.126')
 }
 
 sourceSets.main.resources {
