--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,10 +29,12 @@ jobs:
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Gradle Build
+      timeout-minutes: 5
       uses: gradle/gradle-build-action@v2
       with:
         arguments: build
     - name: Data Generation
+      timeout-minutes: 3
       uses: gradle/gradle-build-action@v2
       with:
         arguments: :runData
