--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'eclipse'
     id 'maven-publish'
-    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.spongepowered.mixin' version '0.7.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
@@ -102,8 +102,6 @@ minecraft {
         }
         data {
             workingDirectory project.file('run')
-
-            forceExit false
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'REGISTRIES'
