--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,26 +18,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up JDK
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
     - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1
+      uses: gradle/wrapper-validation-action@v2
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
     - name: Gradle Build
       timeout-minutes: 20
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: build
+      run: ./gradlew build
     - name: Data Generation
       timeout-minutes: 5
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: :runData
+      run: ./gradlew :runData
     - name: Detect Changes
       id: changes
       uses: ch4rl3x/has-changes-action@3058353091eb04bf2c56876af42fd5a286b41faa
