--- a/.github/workflows/gradle_ci.yml
+++ b/.github/workflows/gradle_ci.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Gradle CI
 
 on:
   push:
@@ -14,7 +14,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-rundata:
     runs-on: ubuntu-latest
 
     steps:
