--- a/.github/workflows/pr_ci.yml
+++ b/.github/workflows/pr_ci.yml
@@ -5,6 +5,10 @@ on: [ pull_request ]
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
       - uses: dbelyaev/action-checkstyle@v1.7.1
