Fix for build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ runs {
     gameTestServer {
     }
     data {
-        programArguments.addAll '--mod', 'minestuck', '--all', '--output', file('src/main/generated/resources/'), '--existing', sourceSets.main.resources.srcDirs[0]
+        programArguments.addAll '--mod', 'minestuck', '--all', '--output', file('src/main/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
     }
 }
 
