Fix mods.toml and enumextensions

--- a/src/main/resources/META-INF/enumextensions.json
+++ b/src/main/resources/META-INF/enumextensions.json
@@ -4,13 +4,13 @@
       "enum": "net/minecraft/world/entity/MobCategory",
       "name": "MINESTUCK_UNDERLING",
       "constructor": "(Ljava/lang/String;IZZI)V",
-      "parameters": [ "underling", 28, false, false, 128 ]
+      "parameters": [ "minestuck:underling", 28, false, false, 128 ]
     },
     {
       "enum": "net/minecraft/world/entity/MobCategory",
       "name": "MINESTUCK_CONSORT",
       "constructor": "(Ljava/lang/String;IZZI)V",
-      "parameters": [ "consort", 8, true, false, 128 ]
+      "parameters": [ "minestuck:consort", 8, true, false, 128 ]
     }
   ]
 }
