--- a/build.gradle
+++ b/build.gradle
@@ -66,12 +66,12 @@ runs {
     client {
         // Add an uuid arg if you have specified it in a relevant gradle.properties file. NOTE: Do not use the gradle.properties file in the project! (because that one is supposed to be shared among all devs) Create one in your "gradle user home" instead.
         if (project.hasProperty('mc_uuid')) {
-            programArguments.addAll '--uuid', project.getProperty('mc_uuid')
+            arguments '--uuid', project.getProperty('mc_uuid')
         }
 
         // Add an username arg if you have specified it in a relevant gradle.properties file. Note that specifying a uuid and a non-matching username (or no username specified) may cause single-player worlds to freeze up when exiting the world.
         if (project.hasProperty('mc_username')) {
-            programArguments.addAll '--username', project.getProperty('mc_username')
+            arguments '--username', project.getProperty('mc_username')
         }
     }
     server {
@@ -79,7 +79,7 @@ runs {
     gameTestServer {
     }
     data {
-        programArguments.addAll '--mod', 'minestuck', '--all', '--output', file('src/main/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
+        arguments '--mod', 'minestuck', '--all', '--output', file('src/main/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
     }
 }
 
