--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,23 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.daemon=false
 
-mc_version=1.21
+mc_version=1.21.1
 
 mc_ms_version=1.21.1-1.13.0.1
 
-neo_version=21.1.80
+neo_version=21.1.152
 
 neogradle.subsystems.parchment.minecraftVersion=1.21
 neogradle.subsystems.parchment.mappingsVersion=2024.07.28
 
-mc_jei_version=19.8.2.99
+mc_jei_version=19.21.2.313
 
 mc_gecko_version=neoforge-1.21.1:4.7
 
 infiniverse_branch=infiniverse-1.21
 infiniverse_version=2.0.1.0
+
+create_version=6.0.6-98
+ponder_version=1.0.59
+flywheel_version=1.0.4
+registrate_version = MC1.21-1.3.0+62
